Fixed toggle button in dark mode

--- a/projects/pepper/src/styles/dark-mode.scss
+++ b/projects/pepper/src/styles/dark-mode.scss
@@ -268,4 +268,8 @@ body.dark {
         color: $dark-secondary;
     }
 
+    .toggle-results > i {
+        background: $dark-background !important;
+    }
+
 }
